--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 <body>
 This windows is the parent windows.<br />
   
-The iframe below does not have the same origin (check the . at the end !).<br />
+The iframe below does have the same origin. There is no bug !<br />
   
-  <iframe src='https://degrangem.github.io./mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe>
+  <iframe src='https://degrangem.github.io./mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe><br />
+
+The iframe below does not have the same origin (check the . at the end !). It's bugged !<br />
+  
+  <iframe src='https://degrangem.github.io./mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe><br />
+
+  Warning : lower your sound to low level.<br />
+Also warning : your computer might freeze.<br />
   </body>
 </html>
