--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ This windows is the parent windows.<br />
   
 The iframe below does have the same origin. There is no bug !<br />
   
-  <iframe src='https://degrangem.github.io./mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe><br />
+  <iframe src='https://degrangem.github.io/mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe><br />
 
 The iframe below does not have the same origin (check the . at the end !). It's bugged !<br />
   
