--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
 </head>
+
 <body>
-This windows is the parent windows.<br />
-  
-The iframe below does have the same origin. There is no bug !<br />
-  
-  <iframe src='https://degrangem.github.io/mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe><br />
 
-The iframe below does not have the same origin (check the . at the end !). It's bugged !<br />
-  
-  <iframe src='https://degrangem.github.io./mathlivebug/iframe.html' style='width:100%;height:600px;'></iframe><br />
+    This windows is the parent windows.<br />
+    <div style="display:flex;">
+        <div>
 
-  Warning : lower your sound to low level.<br />
-Also warning : your computer might freeze.<br />
-  </body>
+            The iframe below does have the same origin. There is no bug !<br />
+
+            <iframe src='https://degrangem.github.io/mathlivebug/iframe.html'
+                style='width:100%;height:600px;'></iframe><br />
+
+        </div>
+        <div>
+
+            The iframe below does not have the same origin (check the . at the end !). It's bugged !<br />
+
+            <iframe src='https://degrangem.github.io./mathlivebug/iframe.html'
+                style='width:100%;height:600px;'></iframe><br />
+        </div>
+    </div>
+
+    Warning : lower your sound to low level.<br />
+    Also warning : your computer might freeze.<br />
+</body>
+
 </html>
