--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     This windows is the parent windows.<br />
     <div style="display:flex;">
-        <div>
+        <div style="background:green;">
 
             The iframe below does have the same origin. There is no bug !<br />
 
@@ -18,7 +18,7 @@
                 style='width:100%;height:600px;'></iframe><br />
 
         </div>
-        <div>
+        <div style="background: red;">
 
             The iframe below does not have the same origin (check the . at the end !). It's bugged !<br />
 
